* [scrollbar] fixed the scroll bar issue with main-content

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,8 @@ app-sidebar {
   padding-top: 16px;
   height: 100%;
   padding-bottom: 20px;
+  overflow: auto;
+  scrollbar-gutter: stable;
 }
 
 .main-content.login-page {
